--- a/OnionConsumeWebAPI/Views/ResultFlightView/_FlightResultsSortingPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/ResultFlightView/_FlightResultsSortingPartialView.cshtml
@@ -836,16 +836,16 @@
 
                                 else if (Model.SimpleAvailibilityaAddResponcelist[j].faresIndividual[k].procuctclass == "HF")
                                 {
-                                    <td><strong>7 Kg</strong></td>
-                                    <td><strong>15 kg</strong></td>
+                                    <td>7 Kg</td>
+                                    <td><strong>15 kg (1 piece)</strong></td>
                                     <td>
 
-                                        <div>3500 (Upto 72 hrs before departure)</div>
+                                        <div>Rs.3500 (Upto 72 hrs before departure)</div>
                                     </td>
                                     <td>
 
                                         <div>
-                                            3000 (Upto 72 hrs before departure)
+                                            Rs.3000 (Upto 72 hrs before departure)
                                         </div>
                                     </td>
                                     <td>
@@ -1973,6 +1973,14 @@
                                 {
                                     <td>Rs. 3500</td>
                                     <td>Fees starts at onward</td>
+                                    <td>As per Airline Fare rule</td>
+                                }
+                               
+                                else if (Model.SimpleAvailibilityaAddResponcelist[j].faresIndividual[0].procuctclass.Equals("Premium Classic"))
+                                                                                   
+                                {
+                                    <td>Rs. 3500</td>
+                                    <td>3 days upto 2 hrs prior from departure</td>
                                     <td>As per Airline Fare rule</td>
                                 }
                                 else
