--- a/OnionConsumeWebAPI/Views/RoundAATripsellRT/RTPostSeatMapModaldataView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundAATripsellRT/RTPostSeatMapModaldataView.cshtml
@@ -502,7 +502,7 @@
                 if (checkedValues2[i].includes("Airasia")) {
                     $('#inputConnect_' + i).val(parts[2]);
                     $('.feeSpanConnect_' + i).text(parts[0]);
-                    $('#outputDiv_' + i).text(parts[2]);
+                    $('#outputDivConnect_' + i).text(parts[2]);
                 }
 
 
