--- a/OnionConsumeWebAPI/Views/GDSTripsell/PostSeatMapModaldataView.cshtml
+++ b/OnionConsumeWebAPI/Views/GDSTripsell/PostSeatMapModaldataView.cshtml
@@ -74,8 +74,10 @@
                     }
                 }
                 passengerdata = passengerdataValue;
-                for (int pas = 0; pas < passengerdata; pas++)
+                for (int pas = 0; pas < Model.passengerNamedetails.Count; pas++)
                 {
+                    if (Model.passengerNamedetails[pas].passengertypecode == "INF" || Model.passengerNamedetails[pas].passengertypecode == "INFT")
+                        continue;
                     <div class="">
                         <div class="servc-content popinput1">
                             <div>
@@ -111,8 +113,10 @@
                     }
                 }
                 passengerdata1 = passengerdataValue1;
-                for (int pas = 0; pas < passengerdata1; pas++)
+                for (int pas = 0; pas < Model.passengerNamedetails.Count; pas++)
                 {
+                    if (Model.passengerNamedetails[pas].passengertypecode == "INF" || Model.passengerNamedetails[pas].passengertypecode == "INFT")
+                        continue;
                     <div class="py-3">
                         <div class="servc-content popinput2">
                             <div>
