commit GSD SEAT MEAL '11-02-2025'

--- a/OnionConsumeWebAPI/Views/GDSTripsell/_GDSTripsellPatialView.cshtml
+++ b/OnionConsumeWebAPI/Views/GDSTripsell/_GDSTripsellPatialView.cshtml
@@ -352,7 +352,7 @@
 
                                         else if (@item.segments[i].identifier.carrierCode == "OD")
                                         {
-                                            
+
                                             <img class="size-40" src="~/img/flight-logo-icon/batik.png" alt="image">
                                         }
                                         else
@@ -407,7 +407,7 @@
                                             <div class="col-auto">
                                                 @{
                                                     var allCityData = Citynamelist.GetAllCityData();
-                                                    string QueryOriginAirportName =queryorigin;// item.segments[i].legs[j].designator.origin;
+                                                    string QueryOriginAirportName = queryorigin;// item.segments[i].legs[j].designator.origin;
                                                     string QueryDestinationAirportName = querydestination;//item.segments[i].legs[j].designator.destination;
 
                                                     var originCity = allCityData.SingleOrDefault(x => x.citycode == QueryOriginAirportName);
@@ -659,10 +659,10 @@
                                                     <ul>
                                                         <li>1: Cabin Bag: 7 k.g</li>
                                                         <li>2: Check-In: 15 k.g</li>
-                                                        <li>3: Cancellation: Rs. 3500:- Fee starts at Onward.</li>
-                                                        <li>4: Date Change: Rs. 3000:- Fee starts at Onward.</li>
-                                                        <li>5: Seat : Free seats</li>
-                                                        <li>6: Meal : Complimentary meal</li>
+                                                        <li>3: Cancellation: Rs. 1000 :- 3 days upto 2 hrs prior from departure</li>
+                                                        <li>4: Date Change: Free</li>
+                                                        <li>5: Seat : -</li>
+                                                        <li>6: Meal : -</li>
                                                     </ul>
                                                 </span>
                                             </span>
@@ -959,8 +959,8 @@
                                                 <td><b>Charges</b></td>
                                             </tr>
                                             <tr>
-                                                <td>Fee starts at Onward.</td>
-                                                <td>Rs. 3500</td>
+                                                <td>3 days upto 2 hrs prior from departure</td>
+                                                <td>Rs. 1000</td>
                                             </tr>
                                         </table>
                                     }
@@ -1100,7 +1100,7 @@
                                         </table>
 
                                     }
-                                    else if (item.segments[i].fares[f].productClass.Equals("Premium Economy Standard")) 
+                                    else if (item.segments[i].fares[f].productClass.Equals("Premium Economy Standard"))
                                     {
                                         <table style="width:100%">
                                             <tr>
@@ -1161,8 +1161,8 @@
                                                 <td><b>Charges</b></td>
                                             </tr>
                                             <tr>
-                                                <td>Fee starts at Onward.</td>
-                                                <td>Rs. 3000</td>
+                                                <td>-</td>
+                                                <td>Free</td>
                                             </tr>
                                         </table>
                                     }
