--- a/OnionConsumeWebAPI/Views/RoundAATripsell/RTPostSeatMapModaldataView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundAATripsell/RTPostSeatMapModaldataView.cshtml
@@ -833,8 +833,8 @@ $("#leftConnectbtn_2").off("click").on("click", function () {
                 passengerdata = passengerdataValue;
                 for (int pas = 0; pas < Model.passengerNamedetails.Count; pas++)
                 {
-                    //if (Model.passengerNamedetails[pas].passengertypecode == "INF" || Model.passengerNamedetails[pas].passengertypecode == "INFT")
-                        //continue;
+                    if (Model.passengerNamedetails[pas].passengertypecode == "INF" || Model.passengerNamedetails[pas].passengertypecode == "INFT")
+                        continue;
                     <div class="">
                         <div class="servc-content popinput1">
                             <div>
@@ -873,8 +873,8 @@ $("#leftConnectbtn_2").off("click").on("click", function () {
                 passengerdata1 = passengerdataValue1;
                 for (int pas = 0; pas < Model.passengerNamedetails.Count; pas++)
                 {
-                    //if (Model.passengerNamedetails[pas].passengertypecode == "INF" || Model.passengerNamedetails[pas].passengertypecode == "INFT")
-                       // continue;
+                    if (Model.passengerNamedetails[pas].passengertypecode == "INF" || Model.passengerNamedetails[pas].passengertypecode == "INFT")
+                        continue;
                     <div class="py-3">
                         <div class="servc-content popinput2">
                             <div>
@@ -912,8 +912,8 @@ $("#leftConnectbtn_2").off("click").on("click", function () {
                 passengerdata = passengerdataValue;
                 for (int pasRT = 0; pasRT < Model.passengerNamedetails.Count; pasRT++)
                 {
-                    //if (Model.passengerNamedetails[pasRT].passengertypecode == "INF" || Model.passengerNamedetails[pasRT].passengertypecode == "INFT")
-                        //continue;
+                    if (Model.passengerNamedetails[pasRT].passengertypecode == "INF" || Model.passengerNamedetails[pasRT].passengertypecode == "INFT")
+                        continue;
                     <div class="">
                         <div class="servc-content popinput1">
                             <div>
@@ -952,8 +952,8 @@ $("#leftConnectbtn_2").off("click").on("click", function () {
                 passengerdata1 = passengerdataValue1;
                 for (int pas = 0; pas < Model.passengerNamedetails.Count; pas++)
                 {
-                    //if (Model.passengerNamedetails[pas].passengertypecode == "INF" || Model.passengerNamedetails[pas].passengertypecode == "INFT")
-                        //continue;
+                    if (Model.passengerNamedetails[pas].passengertypecode == "INF" || Model.passengerNamedetails[pas].passengertypecode == "INFT")
+                        continue;
                     <div class="py-3">
                         <div class="servc-content popinput2">
                             <div>
