--- a/OnionConsumeWebAPI/Views/RoundAATripsell/RTPostSeatMapModaldataView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundAATripsell/RTPostSeatMapModaldataView.cshtml
@@ -1086,32 +1086,10 @@ $("#leftConnectbtn_2").off("click").on("click", function () {
                                                                 seatavailability = arrayofseat[3].Trim();
                                                             }
 
-                                                            if (seatavailability == "100")
+                                                            if (seatavailability != "5")
                                                             {
-                                                                <li class="seat-li chkbox tooltip">
+                                                                <li class="seat-li chkbox">
                                                                     <input type="checkbox" name="unitKey" value="" class="chkbox" disabled />
-                                                                    <span class="tooltiptext">Paid Seat: Available After Reservation.</span>
-                                                                </li>
-                                                            }
-                                                            else if (seatavailability == "10")
-                                                            {
-                                                                <li class="seat-li chkbox tooltip">
-                                                                    <input type="checkbox" name="unitKey" value="" class="chkbox" disabled />
-                                                                    <span class="tooltiptext">Sorry, seat is Blocked.</span>
-                                                                </li>
-                                                            }
-                                                            else if (seatavailability == "5")
-                                                            {
-                                                                <li class="seat-li chkbox tooltip">
-                                                                    <input type="checkbox" name="unitKey" value="" class="chkbox" disabled />
-                                                                    <span class="tooltiptext">Sorry, seat is occupied.</span>
-                                                                </li>
-                                                            }
-                                                            else if (seatavailability == "11")
-                                                            {
-                                                                <li class="seat-li chkbox tooltip" style="background: #fff;border: none;">
-                                                                    <input type="checkbox" name="unitKey" value="" class="chkbox d-none" disabled />
-                                                                    <span class="tooltiptext">No Seat Available.</span>
                                                                 </li>
                                                             }
                                                             else
@@ -1216,32 +1194,10 @@ $("#leftConnectbtn_2").off("click").on("click", function () {
                                                                 feeamountF1 = arrayofseat[0].Trim();
                                                                 seatavailability = arrayofseat[3].Trim();
                                                             }
-                                                            if (seatavailability == "100")
+                                                            if (seatavailability != "5")
                                                             {
-                                                                <li class="seat-li chkbox tooltip">
+                                                                <li class="seat-li chkbox">
                                                                     <input type="checkbox" name="unitKey" value="" class="chkbox" disabled />
-                                                                    <span class="tooltiptext">Paid Seat: Available After Reservation.</span>
-                                                                </li>
-                                                            }
-                                                            else if (seatavailability == "10")
-                                                            {
-                                                                <li class="seat-li chkbox tooltip">
-                                                                    <input type="checkbox" name="unitKey" value="" class="chkbox" disabled />
-                                                                    <span class="tooltiptext">Sorry, seat is Blocked.</span>
-                                                                </li>
-                                                            }
-                                                            else if (seatavailability == "5")
-                                                            {
-                                                                <li class="seat-li chkbox tooltip">
-                                                                    <input type="checkbox" name="unitKey" value="" class="chkbox" disabled />
-                                                                    <span class="tooltiptext">Sorry, seat is occupied.</span>
-                                                                </li>
-                                                            }
-                                                            else if (seatavailability == "11")
-                                                            {
-                                                                <li class="seat-li chkbox tooltip" style="background: #fff;border: none;">
-                                                                    <input type="checkbox" name="unitKey" value="" class="chkbox d-none" disabled />
-                                                                    <span class="tooltiptext">No Seat Available.</span>
                                                                 </li>
                                                             }
                                                             else
@@ -1400,32 +1356,10 @@ $("#leftConnectbtn_2").off("click").on("click", function () {
                                                                     seatavailability = arrayofseat[3].Trim();
                                                                 }
 
-                                                                if (seatavailability == "100")
+                                                                if (seatavailability != "5")
                                                                 {
-                                                                    <li class="seat-li chkbox tooltip">
+                                                                    <li class="seat-li chkbox">
                                                                         <input type="checkbox" name="unitKey" value="" class="chkbox" disabled />
-                                                                        <span class="tooltiptext">Paid Seat: Available After Reservation.</span>
-                                                                    </li>
-                                                                }
-                                                                else if (seatavailability == "10")
-                                                                {
-                                                                    <li class="seat-li chkbox tooltip">
-                                                                        <input type="checkbox" name="unitKey" value="" class="chkbox" disabled />
-                                                                        <span class="tooltiptext">Sorry, seat is Blocked.</span>
-                                                                    </li>
-                                                                }
-                                                                else if (seatavailability == "5")
-                                                                {
-                                                                    <li class="seat-li chkbox tooltip">
-                                                                        <input type="checkbox" name="unitKey" value="" class="chkbox" disabled />
-                                                                        <span class="tooltiptext">Sorry, seat is occupied.</span>
-                                                                    </li>
-                                                                }
-                                                                else if (seatavailability == "11")
-                                                                {
-                                                                    <li class="seat-li chkbox tooltip" style="background: #fff;border: none;">
-                                                                        <input type="checkbox" name="unitKey" value="" class="chkbox d-none" disabled />
-                                                                        <span class="tooltiptext">No Seat Available.</span>
                                                                     </li>
                                                                 }
                                                                 else
@@ -1531,32 +1465,10 @@ $("#leftConnectbtn_2").off("click").on("click", function () {
                                                                     feeamountF1 = arrayofseat[0].Trim();
                                                                     seatavailability = arrayofseat[3].Trim();
                                                                 }
-                                                                if (seatavailability == "100")
+                                                                if (seatavailability != "5")
                                                                 {
-                                                                    <li class="seat-li chkbox tooltip">
+                                                                    <li class="seat-li chkbox">
                                                                         <input type="checkbox" name="unitKey" value="" class="chkbox" disabled />
-                                                                        <span class="tooltiptext">Paid Seat: Available After Reservation.</span>
-                                                                    </li>
-                                                                }
-                                                                else if (seatavailability == "10")
-                                                                {
-                                                                    <li class="seat-li chkbox tooltip">
-                                                                        <input type="checkbox" name="unitKey" value="" class="chkbox" disabled />
-                                                                        <span class="tooltiptext">Sorry, seat is Blocked.</span>
-                                                                    </li>
-                                                                }
-                                                                else if (seatavailability == "5")
-                                                                {
-                                                                    <li class="seat-li chkbox tooltip">
-                                                                        <input type="checkbox" name="unitKey" value="" class="chkbox" disabled />
-                                                                        <span class="tooltiptext">Sorry, seat is occupied.</span>
-                                                                    </li>
-                                                                }
-                                                                else if (seatavailability == "11")
-                                                                {
-                                                                    <li class="seat-li chkbox tooltip" style="background: #fff;border: none;">
-                                                                        <input type="checkbox" name="unitKey" value="" class="chkbox d-none" disabled />
-                                                                        <span class="tooltiptext">No Seat Available.</span>
                                                                     </li>
                                                                 }
                                                                 else
